--- a/bottom.html
+++ b/bottom.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
-    <title></title>
+    <title>DMMD</title>
   </head>
   <body>
     <!-- the bulk of information displayed in the bottom.html page, is nearly identical to the HTML for the top page.-->
