--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" type="text/css" rel="stylesheet" />
-    <title></title>
+    <title>DMMD</title>
   </head>
   <body>
     <header>
