--- a/top.html
+++ b/top.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
-    <title></title>
+    <title>DMMD</title>
   </head>
   <body>
     <!-- The content shown in the bottom and top pages are the same, as they both have the same purpose. All information for these pages in loaded from suggestions.js. -->
