--- a/top.html
+++ b/top.html
@@ -13,7 +13,7 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <a href="homepage.html"><img src="img/logo.png" src="img/logo.gif" src="img/logo.jpg"  alt="logo" class="logo"></a>
+          <a href="homepage.html"><img src="img/logo.png" "img/logo.gif" "img/logo.jpg"  alt="logo" class="logo"></a>
         </div>
       <div class="searchbar">
         <!-- by default the searchbar is displayed in the navbar, the only exception for this is on the homepage. -->
