--- a/results.html
+++ b/results.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <a href="homepage.html"><img src="img/logo.png" src="img/logo.gif" src="img/logo.jpg"  alt="logo" class="logo"></a>
+          <a href="homepage.html"><img src="img/logo.png" "img/logo.gif" "img/logo.jpg"  alt="logo" class="logo"></a>
         </div>
       <div class="searchbar">
         <input type="text" placeholder="Search..." class="film-search">
