--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <a href="homepage.html"><img src="img/logo.png" src="img/logo.gif" src="img/logo.jpg"  alt="logo" class="logo"></a>
+          <a href="homepage.html"><img src="img/logo.png" "img/logo.gif" "img/logo.jpg"  alt="logo" class="logo"></a>
           <!-- png, jpg, and gif were all attached using "src", in order to make sure all the images are diplayed on different browsers. -->
         </div>
         <a href="#" class="toggle-button">
