--- a/top.html
+++ b/top.html
@@ -68,6 +68,7 @@
         <option value='26'>Large</option>
       </select>
     </div>
+  </div>  
     <script src="js/site.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/top.js"></script>
