--- a/results.html
+++ b/results.html
@@ -70,6 +70,7 @@
         <option value='26'>Large</option>
       </select>
     </div>
+  </div>      
     <script src="js/site.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/results.js"></script>
