--- a/homepage.html
+++ b/homepage.html
@@ -75,6 +75,7 @@
       <option value='26'>Large</option>
     </select>
   </div>
+  </div>    
     <script src="js/site.js"></script>
     <script src="js/suggestions.js"></script>
   </body>
