--- a/contact.html
+++ b/contact.html
@@ -110,6 +110,7 @@
         <option value='26'>Large</option>
       </select>
     </div>
+  </div>      
     <script src="js/site.js"></script>
     <script src="js/suggestions.js"></script>
   </body>
