--- a/bottom.html
+++ b/bottom.html
@@ -63,6 +63,7 @@
         <option value='26'>Large</option>
       </select>
     </div>
+  </div>      
     <script src="js/site.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/bottom.js"></script>
